<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view_launch"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardBackgroundColor="@android:color/background_light"
    card_view:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        tools:ignore="HardcodedText,RtlSymmetry,ContentDescription">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageViewLaunchPatch"
            android:layout_width="60dp"
            android:layout_height="60dp"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_mission_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:text="Mission"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintBottom_toBottomOf="@+id/circleImageViewLaunchPatch"
            card_view:layout_constraintStart_toEndOf="@+id/circleImageViewLaunchPatch"
            card_view:layout_constraintTop_toTopOf="@+id/circleImageViewLaunchPatch" />

        <TextView
            android:id="@+id/text_view_rocket_name_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="25dp"
            android:paddingEnd="5dp"
            android:text="@string/rocket_name_tag"
            android:textStyle="bold"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/circleImageViewLaunchPatch" />

        <TextView
            android:id="@+id/text_view_launch_site_name_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingEnd="5dp"
            android:text="@string/launch_site_name_tag"
            android:textStyle="bold"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/text_view_rocket_name_tag" />

        <TextView
            android:id="@+id/text_view_launch_date_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingEnd="5dp"
            android:text="@string/launch_date_tag"
            android:textStyle="bold"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/text_view_launch_site_name_tag" />

        <TextView
            android:id="@+id/text_view_rocket_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Test Rocket"
            card_view:layout_constraintBottom_toBottomOf="@+id/text_view_rocket_name_tag"
            card_view:layout_constraintStart_toEndOf="@+id/text_view_rocket_name_tag" />

        <TextView
            android:id="@+id/text_view_launch_site_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Launch site number 1"
            card_view:layout_constraintBottom_toBottomOf="@+id/text_view_launch_site_name_tag"
            card_view:layout_constraintStart_toEndOf="@+id/text_view_launch_site_name_tag" />

        <TextView
            android:id="@+id/text_view_launch_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10/10/1990"
            card_view:layout_constraintBottom_toBottomOf="@+id/text_view_launch_date_tag"
            card_view:layout_constraintStart_toEndOf="@+id/text_view_launch_date_tag" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>